Fix alignment on authentication and dog pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,5 +51,4 @@ h1, h2, h3, h4, h5, h6 {
   height: 'max-content';
   padding: '1.5rem 1.25rem';
   width: 12.5rem;
-  z-index: 9999;
 }
